# psdi-data-conversion

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  atomsk.sh  byte.js  c2x.sh  convert.sh  pyproject.toml  requirements-local.txt  requirements.txt  run_local.sh  run_tests.py  startup.sh
.github/: dependabot.yml
.github/workflows/: anchore-scan.yml  ci-cron.yml  ci-deploy-production.yml  ci-feature.yml  ci-main-and-pr.yml  ci-main.yml  ci-pr.yml  ci-rc.yml  ci-release.yml  deploy-azure.yml  deploy-k8s.yml  docker-publish.yml  feature-push.yml  job-anchore-scan.yml  job-container-push.yml  job-deploy-azure.yml  job-deploy-k8s.yml  job-external-deployment.yml  job-open-pull-request.yml  job-publish-doc.yml  job-publish-pypi.yml  job-tag-container-push.yml  job-tag.yml  job-test-gui.yml  job-test-main.yml  job-test-python.yml  main_psdidev2.yml  manual-deploy-production.yml  open-pull-request.yml  python-publish.yml  run-tests.yml  tag-container-push.yml  test-gui.yml  test-python.yml  test-tag-container-push.yml  test_package.yml  update_assets.yml
deploy/base/: data-conversion-admin-role-binding.yml  data-conversion-admin-role.yml  data-conversion-deployment.yml  data-conversion-sa-secret.yml  data-conversion-sa.yml  data-conversion-service.yml  flask-deployment.yml  flask-service.yml  kustomization.yaml
deploy/development/: data-conversion-ingress.yaml  deployment-env-patch.template.yaml  deployment-env-patch.yaml  flask-ingress.yaml  kustomization.yaml  namespace.yaml
deploy/production/: data-conversion-ingress.yaml  deployment-env-patch.template.yaml  deployment-env-patch.yaml  kustomization.yaml  namespace.yaml
deploy/staging/: data-conversion-ingress.yaml  deployment-env-patch.template.yaml  deployment-env-patch.yaml  flask-ingress.yaml  kustomization.yaml  namespace.yaml
doc/: conversion_chaining.md
psdi_data_conversion/: MANIFEST.in  __init__.py  app.py  constants.py  converter.py  database.py  dist.py  file_io.py  log_utility.py  logging.py  main.py  main_gui.py  security.py
psdi_data_conversion/converters/: atomsk.py  base.py  c2x.py  obenbabel.py  openbabel.py
psdi_data_conversion/gui/: accessibility.py  authentication.py  env.py  get.py  post.py  setup.py
psdi_data_conversion/scripts/: atomsk.sh  c2x.sh  start_server.sh
psdi_data_conversion/static/content/: accessibility.htm  convert.htm  convertato.htm  convertc2x.htm  documentation.htm  download.htm  feedback.htm  header-links.html  psdi-common-footer.html  psdi-common-header.html  report.htm
psdi_data_conversion/static/content/index-versions/: header-links.html  psdi-common-footer.html  psdi-common-header.html
psdi_data_conversion/static/data/: data.json
psdi_data_conversion/static/javascript/: accessibility.js  authentication.js  common.js  convert.js  convert.py  convert_common.js  convertato.js  convertc2x.js  data.js  format.js  load_accessibility.js  psdi-common.js  report.js
psdi_data_conversion/static/styles/: format.css  psdi-common.css
psdi_data_conversion/templates/: about.htm  accessibility.htm  convert_ato.htm  convert_ob.htm  convertc2x.htm  documentation.htm  download.htm  feedback.htm  index.htm  report.htm
psdi_data_conversion/templates/content/: header-links.html  psdi-common-footer.html  psdi-common-header.html
psdi_data_conversion/templates/parent/: convert.htm  layout.htm
psdi_data_conversion/testing/: constants.py  conversion_callbacks.py  conversion_test_spec.py  conversion_test_specs.py  gui.py  utils.py
psdi_data_conversion/website/: __init__.py  env.py
scripts/: fetch-common-style.conf  keyclock-run.sh  make-index-html.sh  make_doc_graph_plots.py  setup_bin.py  setup_helper.py
static/content/: accessibility.htm  convert.htm  convertato.htm  convertc2x.htm  documentation.htm  feedback.htm  header-links.html  index-header-links.html  local_footer.html  local_header.html  report.htm
static/data/: data.json
static/javascript/: accessibility.js  byte.js  convert.js  convert_common.js  convertato.js  convertc2x.js  data.js  documentation.js  feedback.js  format.db  format.js  load_accessibility.js  report.js
static/styles/: format.css  psdi-common.css
templates/: index.htm
test_data/: caffeine-ia-okx-oof4.smi  caffeine-ia-okx-oof4l5.smi  caffeine-ia-okx.smi  caffeine-ia-ox.smi  caffeine-ia.smi  caffeine-no-flags.smi  caffeine-smi.tar  ch3cl-esp.cub
test_data/output/: hemoglobin_Atomsk.xyz  hemoglobin_c2x.xyz
tests/: cli_test.py  conftest.py  converter_test.py  database_test.py  dist_test.py  file_io_test.py  logging_test.py  security_test.py
tests/gui/: gui_test.py
tests/python/: cli_test.py  converter_test.py  database_test.py
tests/selenium/: run.sh  selenium_tests.py
