[build-system]
requires = ["hatchling>=1.0.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "psdi_data_conversion"
authors = [
  { name = "Ray Whorley" },
  { name = "Don Cruickshank" },
  { name = "Samantha Pearman-Kanza", email = "s.pearman-kanza@soton.ac.uk" },
  { name = "Bryan Gillis", email = "7204836+brgillis@users.noreply.github.com" },
  { name = "Tom Underwood" },
]
description = "Chemistry file format conversion service, provided by PSDI"
readme = "README.md"
keywords = ["chemistry", "conversion", "openbabel", "atomsk", "flask"]
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Flask",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3",
  "Topic :: File Formats",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = ["openbabel-wheel", "py"]
requires-python = ">= 3.12"
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]
gui = ["Flask", "requests"]
gui-test = ["Flask", "requests", "pytest", "selenium", "webdriver_manager"]

[project.scripts]
psdi-data-convert = "psdi_data_conversion.main:main"

[project.urls]
Homepage = "https://psdidev2.azurewebsites.net/"
Repository = "https://github.com/PSDI-UK/psdi-data-conversion"
Issues = "https://github.com/PSDI-UK/psdi-data-conversion/issues"

# Hatch-specific configuration
[tool.hatch]
version = { source = "vcs" } # Use version Git tags

[tool.hatch.build]
exclude = [
  ".github/**",
  "deploy/**",
  "scripts/fetch-*",
  "scripts/make-index-html.sh",
  "convert.py",
  "byte.js",
  "run_tests.py",
  "requirements.txt",
  "Dockerfile",
]

# The following lines run a script which excludes binaries for platforms other than the current from the binary.
# Once the project is set up to make separate builds for different platforms, the below can be uncommented to
# enable this behaviour.
# [tool.hatch.build.hooks.custom]
# path = "scripts/setup_bin.py"

[tool.pytest.ini_options]
pythonpath = ["."]
